--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <!-- Map Section -->
         <div class="map-section">
             <div class="map-header">
-                <h2>Location Map</h2>
+                <h2>Real-time Worldwide Flight Traffic</h2>
                 <button class="close-map-btn">
                     <i class="fas fa-times"></i>
                 </button>
