--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -126,6 +126,21 @@
                     </div>
                 </div>
             </div>
+
+            <div class="stat-card">
+                <div class="stat-icon alert-icon">
+                    <i class="fas fa-exclamation-triangle"></i>
+                </div>
+                <div class="stat-content">
+                    <div class="stat-label">Pending Alerts</div>
+                    <div class="stat-number">02</div>
+                    <div class="stat-change positive">
+                        <i class="fas fa-trending-up"></i>
+                        1.9% Up from past week
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <!-- Content Grid -->
@@ -244,7 +259,7 @@
             </div>
         </div>
 
-        <!-- Flight Traffic Map Section -->
+        <!-- Map Section -->
         <div class="map-section">
             <div class="map-header">
                 <h2>Real-time Worldwide Flight Traffic</h2>
@@ -253,18 +268,7 @@
                 </button>
             </div>
             <div class="map-container">
-                <div class="map-overlay">
-                    <div class="map-info">
-                        <div class="map-title">Star Parking Ltd.</div>
-                        <div class="map-stats">
-                            <div>1000 km</div>
-                            <div>500 mi</div>
-                        </div>
-                    </div>
-                </div>
-                <div id="flightMap" class="flight-map">
-                    <!-- Map will be rendered here -->
-                </div>
+                <img src="map.png" alt="Location Map" class="map-image">
             </div>
         </div>
     </main>
