Add horizontal rule separator above calendar in main content

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                         </div>
                     </div>
                 </div>
+                <hr class="calender-header-hr"><br>
                 <div id="calendar"></div>
             </div>
 
