Add close button to sidebar header for improved navigation

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
     <aside class="sidebar" id="sidebar">
         <div class="sidebar-header">
             <h3>Star Parking Ltd.</h3>
+            <button class="sidebar-close-btn" id="sidebarCloseBtn">
+                <i class="fas fa-times"></i>
+            </button>
         </div>
         <nav class="sidebar-nav">
             <a href="#" class="sidebar-link active">
