--- a/index.html
+++ b/index.html
@@ -3,78 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Star Parking Ltd. - Park & Go Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Dashboard - Star Parking Ltd.</title>
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar">
-        <div class="nav-left">
-            <button class="hamburger-menu" id="hamburgerMenu">
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="logo">Star Parking Ltd.</div>
-        </div>
-        <div class="nav-center">
-            <a href="#" class="nav-link active">Home</a>
-            <div class="nav-dropdown">
-                <a href="#" class="nav-link">Meet & Greet <i class="fas fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#">Meet & Greet</a>
-                    <a href="#">Park & Ride</a>
-                    <a href="#">Reset Service</a>
-                </div>
-            </div>
-            <div class="nav-dropdown">
-                <a href="#" class="nav-link">Heathrow <i class="fas fa-chevron-down"></i></a>
-            </div>
-            <a href="#" class="nav-link">My Profile</a>
-            <a href="#" class="nav-link">Logout</a>
-        </div>
-        <div class="nav-right">
-            <div class="search-container">
-                <i class="fas fa-search"></i>
-                <input type="text" placeholder="Search" class="search-input">
-            </div>
-            <button class="add-event-btn">Add Event</button>
-        </div>
-        <button class="close-btn" id="closeBtn">
-            <i class="fas fa-times"></i>
-        </button>
-    </nav>
+    <!-- Navigation will be loaded here -->
+    <div id="navbar-container"></div>
 
-    <!-- Sidebar -->
-    <aside class="sidebar" id="sidebar">
-        <div class="sidebar-header">
-            <h3>Star Parking Ltd.</h3>
-        </div>
-        <nav class="sidebar-nav">
-            <a href="#" class="sidebar-link active">
-                <i class="fas fa-home"></i>
-                <span>Dashboard</span>
-            </a>
-            <a href="#" class="sidebar-link">
-                <i class="fas fa-calendar"></i>
-                <span>Events</span>
-            </a>
-            <a href="#" class="sidebar-link">
-                <i class="fas fa-user-clock"></i>
-                <span>Clocked in User</span>
-            </a>
-            <a href="#" class="sidebar-link">
-                <i class="fas fa-bell"></i>
-                <span>Alerts</span>
-            </a>
-            <a href="#" class="sidebar-link">
-                <i class="fas fa-cog"></i>
-                <span>Settings</span>
-            </a>
-        </nav>
-    </aside>
+    <!-- Sidebar will be loaded here -->
+    <div id="sidebar-container"></div>
 
     <!-- Main Content -->
     <main class="main-content">
@@ -268,11 +209,13 @@
                 </button>
             </div>
             <div class="map-container">
-                <img src="map.png" alt="Location Map" class="map-image">
+                <img src="assets/map.png" alt="Location Map" class="map-image">
             </div>
         </div>
     </main>
 
-    <script src="script.js"></script>
+    <!-- Scripts -->
+    <script src="js/components.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
